--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#"><img src="images/logoColor.png"/></a>
         </div>
         <div class="navbar-collapse collapse" style="height: 1px;">
           <div class="navItem">
@@ -67,10 +67,12 @@
         </div>
       </div>
     </div>
-     <div class="container">
-      	<div class="row">
-        	<h2>Become your own boss and help mans best friend!</h2>
-        </div>
+     <div class="quote">
+     	<div class="container">
+      		<div class="row">
+        		<img src="images/medPaw.png" class="dogPawQuote"/><h2 class="quoteText">Become your own boss and help mans best friend!</h2><img src="images/medPaw.png" class="dogPawQuote"/>
+       	 	</div>
+     	</div>
      </div>
 	<div class="jumbotron">
       <div class="container">
@@ -108,6 +110,7 @@ started today.</p>
         </div>
         <div class="col-md-4">
           <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="images/hotelHoundsFlipflop.png">
+          <p><a class="btnLarge btn-default" href="#" role="button" style="text-align:center;">Sign Up Now</a></p>
         </div>
       </div>
       <hr>
@@ -150,7 +153,7 @@ started today.</p>
    	</div>
     <div class="container">
       	<div class="row">
-        	<img src="images/hotelHoundsEquation.png">
+        	<img src="images/hotelHoundsEquation.png" class="equation">
         </div>
     </div>
     <div id="footer">
