--- a/testPage.html
+++ b/testPage.html
@@ -64,13 +64,13 @@
 
 /* Search widget container. Here you can change border, background and text style of the widget */
 .search-widget {
-    border-style: solid;
+    /*border-style: solid;
     border-width: 1px;
     border-color: #cc3f27;
     background: #333333;
     font-size: 11px;
     text-align: left;
-    font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;*/
     color: #ffffff;
     overflow: hidden; /* Cut the content out of the bounds of search-widget */
 }
